fix spacing on navbar

--- a/static/css/default.css
+++ b/static/css/default.css
@@ -21,7 +21,3 @@ html, body{
 h1 {
     font-size: 5em;
 }
-
-nav {
-    margin-left: 1em;
-}
